--- a/exercise_18-1.html
+++ b/exercise_18-1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Exercise 18-1: Transitions</title>
