--- a/exercise_18-2.html
+++ b/exercise_18-2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Exercise 18-2: transform</title>
@@ -30,9 +30,24 @@ img {
   width: 200px;
   height: 150px;
   box-shadow: 2px 2px 2px rgba(0,0,0,.4);
+  transition: transform 0.3s linear;
 }
 
-
+a:hover #img1, a:focus #img1 {
+    transform: rotate(5deg) scale(1.5);
+}
+a:hover #img2, a:focus #img2 {
+    transform: rotate(-5deg) scale(1.5);
+}
+a:hover #img3, a:focus #img3 {
+    transform: rotate(10deg) scale(1.5);
+}
+a:hover #img4, a:focus #img4 {
+    transform: rotate(-10deg) scale(1.5);
+}
+a:hover img {
+    box-shadow: 6px 6px 6px rgba(0,0,0,.3);
+}
 
 </style>
 </head>
@@ -43,7 +58,7 @@ img {
   <li><a href=""><img src="images/anchovies.jpg" id="img1" alt=""></a></li>
   <li><a href=""><img src="images/jellyfish1.jpg" id="img2" alt=""></a></li>
   <li><a href=""><img src="images/bluejellyfish.jpg" id="img3" alt=""></a></li>
-  <li><a href=""><img src="images/seadragon.jpg" id="img4"alt=""></a></li>
+  <li><a href=""><img src="images/seadragon.jpg" id="img4" alt=""></a></li>
 
 </ul>
 
